--- a/assets/portfolioStylesheet.css
+++ b/assets/portfolioStylesheet.css
@@ -3,6 +3,9 @@
     --main-font-color: #7a2048;
     --main-bdr-color: #1e2761;
 }
+* {
+    margin: 0;
+}
 body {
     background-color: var(--main-bdr-color);
 }
@@ -14,6 +17,7 @@ header {
     background-color: var(--main-bg-color);
     margin: 25px;
     border-radius: 25px;
+    padding: 20px;
 }
 header h1 {
     border-bottom: 3px solid var(--main-bdr-color);
@@ -26,30 +30,46 @@ nav {
     text-align: center; 
     margin: 10px 20px; 
     border-radius: 25px;
+    font-weight: bolder;
+    align-items: center;
 }
 nav ul li {
     margin: 25%;
     border-bottom: 2px solid var(--main-bdr-color);
     list-style-type: none;
     color: var(--main-font-color);
-    font-size: large;
+    font-size: larger;
 }
 /* About Me Section */
-.main-content {
-    display: flex;
-    justify-content: right;
-}
+
 .bio {
-    
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    background-color: var(--main-bg-color);
+    border-radius: 25px;
 }
 .bio h2 {
     color: var(--main-font-color);
     border-bottom: 3px solid var(--main-bdr-color);
     text-align: center;
-
+    
 }
 
 /* Utilities */
+.section-title {
+    color: var(--main-font-color);
+    border-bottom: 3px solid var(--main-bdr-color);
+    text-align: center;
+}
+.content-section {
+    display: flex;
+    background-color: var(--main-bg-color);
+    border-radius: 25px;
+    margin: 5%;
+    flex-direction: column;
+    padding: 7%;
+}
 a {
     color: var(--main-font-color);
     text-decoration: none;
