--- a/assets/portfolioStylesheet.css
+++ b/assets/portfolioStylesheet.css
@@ -32,6 +32,7 @@ nav {
     border-radius: 25px;
     font-weight: bolder;
     align-items: center;
+    
 }
 nav ul li {
     margin: 25%;
@@ -48,6 +49,8 @@ nav ul li {
     text-align: center;
     background-color: var(--main-bg-color);
     border-radius: 25px;
+    
+   
 }
 .bio h2 {
     color: var(--main-font-color);
@@ -55,7 +58,17 @@ nav ul li {
     text-align: center;
     
 }
+/* Website development section */
+.projects {
+    display: flex;
+}
+.website-bubbles a {
+    border: 2px solid var(--main-bdr-color);
+    padding: 20px;
+    margin: 20px;
+    -ms-flex-align: center;
 
+}
 /* Utilities */
 .section-title {
     color: var(--main-font-color);
