--- a/assets/portfolioStylesheet.css
+++ b/assets/portfolioStylesheet.css
@@ -22,17 +22,30 @@ header {
 header h1 {
     border-bottom: 3px solid var(--main-bdr-color);
 }
+footer {
+    display: flex;
+    justify-content: flex-start;
+    color: var(--main-font-color);
+    background-color: var(--main-bg-color);
+    margin: 25px;
+    border-radius: 25px;
+    padding: 20px;
+    bottom: 0;
+}
 /* Navigation */
 nav {
     display: inline-flex;
     background-color: var(--main-bg-color);
-    color: var(--main-font-color);
-    text-align: center; 
+    color: var(--main-font-color); 
     margin: 10px 20px; 
     border-radius: 25px;
     font-weight: bolder;
-    align-items: center;
-    
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+    margin: 1% 5% 5% 1%;
+    align-items: right;
 }
 nav ul li {
     margin: 25%;
@@ -40,6 +53,15 @@ nav ul li {
     list-style-type: none;
     color: var(--main-font-color);
     font-size: larger;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.main-content {
+    position: relative;
+    top: -540px;
+    margin:15px
 }
 /* About Me Section */
 
@@ -50,6 +72,7 @@ nav ul li {
     background-color: var(--main-bg-color);
     border-radius: 25px;
     
+    
    
 }
 .bio h2 {
@@ -59,15 +82,25 @@ nav ul li {
     
 }
 /* Website development section */
-.projects {
-    display: flex;
-}
-.website-bubbles a {
-    border: 2px solid var(--main-bdr-color);
-    padding: 20px;
-    margin: 20px;
-    -ms-flex-align: center;
 
+.website-bubbles div {
+    border: 2px solid var(--main-bdr-color);
+    justify-content: space-around;
+    border-radius: 20px;
+    height: 250px;
+    width: 450px;
+    margin: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    flex: 1;
+    text-align: center;
+    
+
+}
+#run-buddy {
+    background-image: url(../assets/images/runbuddyscreenshot.png);
+    background-size: auto;
+    
 }
 /* Utilities */
 .section-title {
@@ -82,11 +115,39 @@ nav ul li {
     margin: 5%;
     flex-direction: column;
     padding: 7%;
+    padding-top: 1.5%;
+    margin-left: 12%;
+    margin-top: 0;
+    margin-bottom:20px;
 }
+
 a {
     color: var(--main-font-color);
     text-decoration: none;
 }
 .flex-colomn {
     flex-direction: column;
+}
+/* Media Quiries */
+
+
+
+
+
+
+@media screen and (max-width: 980px){
+    nav {
+        position:static;
+        display: flex;
+        flex-grow: 1;
+
+    }
+}
+        
+   
+@media screen and (max-width:768px) {
+    
+    }
+@media screen and (max-width:575px) {
+        
 }
