--- a/assets/portfolioStylesheet.css
+++ b/assets/portfolioStylesheet.css
@@ -48,11 +48,12 @@ nav {
     z-index: 9999;
     width: 200px;
     height: 500px;
+    border: 2px solid var(--main-bdr-color);
     
     
 }
 nav div {
-    margin: 25%;
+    margin: 20%;
     border-bottom: 2px solid var(--main-bdr-color);
     list-style-type: none;
     color: var(--main-font-color);
@@ -61,10 +62,11 @@ nav div {
     justify-content: space-around;
     flex-wrap: nowrap;
     text-align: center;
-    
-    
-    
-   
+    height: 25px;
+}
+.nav-button:hover {
+    background-color: var(--main-bdr-color);
+    border-radius: 15px;
 }
 .main-content {
     display: inline-flex;
@@ -122,7 +124,20 @@ nav div {
 .website-bubbles {
     display: flex;
     flex-wrap: wrap;
+    
 }
+.bubble {
+    opacity: .5;
+}
+
+
+.bubble:hover {
+    opacity: 1;
+    height: 260px;
+    width: 460px;
+    margin-bottom: 0;
+}
+
 .website-bubbles>* {
     flex: 1 1 160px;
 }
